# nerf

./: LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: evaluate_nerf.py  render_nerf.py  train_nerf.py
src/datasets/: blender.py
src/models/: nerf.py
src/nerf_project/datasets/: blender.py
src/nerf_project/models/: nerf.py
src/nerf_project/utils/: image_utils.py  ray_utils.py
tests/: conftest.py  test_image_utils.py  test_nerf_model.py  test_ray_utils.py
