[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-nerf"
version = "0.1.0"
description = "A PyTorch implementation of Neural Radiance Fields (NeRF)."
authors = [
    {name = "AI Developer", email = "dev@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "imageio",
    "configargparse",
    "tqdm",
    "tensorboard",
    "scikit-image",
    "lpips",
    "pytest", # Added pytest
]

[project.urls]
Homepage = "https://github.com/example/pytorch-nerf"
Issues = "https://github.com/example/pytorch-nerf/issues"
